# datainlet

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml  web.yml
datainlet/: definitions.py  resources.py
datainlet/aemet/: assets.py  resources.py
datainlet/ais/: assets.py  constants.py  definitions.py  partitions.py
datainlet/aws/: PointCloud.org  assets.py  definitions.py  utils.py
datainlet/aws/notebooks/: tiledb.ipynb
datainlet/gisd/: assets.py  definitions.py  resources.py
datainlet/huggingface/: assets.py  definitions.py
datainlet/ine/: assets.py  definitions.py
datainlet/miteco/: resources.py
datainlet/ree/: assets.py
datainlet/sourcecoop/: assets.py  definitions.py
datalia/: assets.py  dbt.py  dbt_project.py  definitions.py  publishing.py  resources.py
datalia/aemet/: assets.py  definitions.py  resources.py
datalia/dbt/: assets.py  definitions.py
datalia/huggingface/: assets.py  definitions.py
datalia/ine/: definitions.py
datania/: definitions.py
datania/aemet/: assets.py  definitions.py  resources.py
datania/dbt/: assets.py  definitions.py
datania/huggingface/: assets.py  definitions.py
datania/ine/: assets.py
datania/miteco/: assets.py  definitions.py  resources.py
datania/ree/: assets.py  definitions.py
dbt/: dbt_project.yml  profiles.yml
dbt/models/: demanda_energia_electrica.sql  embalses.sql  hipotecas.sql  ipc.sql  schema.yml  sources.yml  spain_ipc.sql
notebooks/: ine.ipynb  tiledb-pybabylonjs.org
web/: app.tsx  deno.json  index.html  observablehq.config.js  package-lock.json  package.json
web/src/: dagster.md  index.md
web/src/datasets/: datos_meteorologicos_estaciones_aemet.md  demanda_energia_electrica.md  embalses.md  estaciones_aemet.md  hipotecas.md  ipc.md
