[project]
name = "datania"
version = "1.0.0"
description = "Plataforma de datos abiertos para unificar y armonizar información proveniente de diferentes fuentes."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dagster>=1.9.10",
    "dagster-duckdb>=0.25.10",
    "dagster-duckdb-polars>=0.25.10",
    "duckdb>=1.1.3",
    "httpx>=0.28.1",
    "huggingface-hub>=0.27.1",
    "polars>=1.21.0",
    "pyarrow>=19.0.0",
    "tenacity>=9.0.0",
]

[dependency-groups]
dev = [
    "dagster-webserver>=1.9.10",
    "ipykernel>=6.29.5",
    "ruff>=0.9.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["datania"]

[tool.dagster]
module_name = "datania.definitions"
code_location_name = "datania"
