[project]
name = "datania"
version = "0.0.0"
description = "Plataforma de datos abiertos a nivel de España con el objetivo de unificar y armonizar información de multitud de fuentes"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dagster>=1.10.4",
    "dagster-duckdb>=0.26.4",
    "dagster-duckdb-polars>=0.26.4",
    "duckdb>=1.2.1",
    "httpx>=0.28.1",
    "huggingface-hub>=0.29.3",
    "polars>=1.25.2",
    "pyarrow>=19.0.1",
    "tenacity>=9.0.0",
]

[dependency-groups]
dev = ["dagster-webserver>=1.10.4", "ipykernel>=6.29.5", "ruff>=0.11.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["datania"]

[tool.dagster]
module_name = "datania.definitions"
code_location_name = "datania"
